[package]
name = "rendezvous"
version = "0.2.2"
description = "Easier rendezvous channels for thread synchronization"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://github.com/sunsided/rendezvous-rs"
repository = "https://github.com/sunsided/rendezvous-rs"
categories = ["asynchronous"]
license = "EUPL-1.2"
readme = "README.md"
edition = "2021"

[features]
log = ["dep:log"]
tokio = ["dep:tokio"]

[dependencies]
log = { version = "0.4.21", optional = true }
tokio = { version = "1.36.0", optional = true, features = ["full"] }

[dev-dependencies]
tokio-test ="0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
