[package]
name = "rendezvous"
version = "0.3.0"
description = "Easier rendezvous channels for thread synchronization"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://github.com/sunsided/rendezvous-rs"
repository = "https://github.com/sunsided/rendezvous-rs"
categories = ["asynchronous"]
license = "EUPL-1.2"
readme = "README.md"
edition = "2021"

[features]
log = ["dep:log"]
tokio = ["dep:tokio"]

[dependencies]
log = { version = "0.4.20", optional = true }
tokio = { version = "1.34.0", optional = true, features = ["rt"] }

[dev-dependencies]
tokio-test = "0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
